add props to post component

--- a/src/components/Sidebar/Menu/menu.module.scss
+++ b/src/components/Sidebar/Menu/menu.module.scss
@@ -13,6 +13,7 @@
   &.active {
     background-color: white;
     border: 1px solid rgba(gray, .4);
+    border-radius: 3px;
   }
   a {
     text-decoration: none;
