--- a/src/components/Messages/Messages.scss
+++ b/src/components/Messages/Messages.scss
@@ -1,11 +1,45 @@
-.header {
-  width: 100%;
-  height: 83px;
-  background: linear-gradient(0deg, rgba(59, 89, 152, 1) 0%, rgba(77, 104, 161, 1) 100%);
-  border-bottom: 1px solid #133783;
-  padding: 30px 0 14px;
-}
+.messages {
+  display: flex;
+  align-items: flex-start;
 
-.logo-link {
-  max-width: 170px;
+  &__users {
+    flex: 0 0 100px;
+    margin-right: 30px;
+  }
+
+  &__user {
+    font-size: 14px;
+    font-weight: 600;
+    display: flex;
+    align-items: center;
+    text-decoration: none;
+    color: inherit;
+    margin-bottom: 15px;
+
+    img {
+      width: 60px;
+      height: 60px;
+      margin-right: 15px;
+      border-radius: 50%;
+    }
+  }
+
+  &__authors {
+    width: 200px;
+    margin-bottom: 15px;
+  }
+
+  &__text {
+    font-size: 14px;
+    background-color: #fff;
+    padding: 15px;
+    font-weight: 600;
+    display: block;
+    border-radius: 10px;
+    flex: 100%;
+
+    p {
+      margin: 0 0 5px 0
+    }
+  }
 }
