--- a/src/components/Messages/Messages.scss
+++ b/src/components/Messages/Messages.scss
@@ -1,10 +1,11 @@
 .messages {
   display: flex;
   align-items: flex-start;
+  flex-wrap: wrap;
 
   &__users {
-    flex: 0 0 100px;
-    margin-right: 30px;
+    flex: 0 0 130px;
+    padding-right: 30px;
   }
 
   &__user {
@@ -31,15 +32,68 @@
 
   &__text {
     font-size: 14px;
-    background-color: #fff;
-    padding: 15px;
     font-weight: 600;
     display: block;
     border-radius: 10px;
     flex: 100%;
 
     p {
-      margin: 0 0 5px 0
+      margin: 0
+    }
+  }
+
+  &__guest {
+    background-color: #fcfcfc;
+    padding: 5px 10px;
+    border: 1px solid #cfcfcf;
+    border-radius: 5px;
+    position: relative;
+    z-index: 1;
+
+    &::after {
+      content: "";
+      width: 9px;
+      height: 9px;
+      border-top: 1px solid #cfcfcf;
+      border-left: 1px solid #cfcfcf;
+      transform: rotate(-45deg);
+      display: block;
+      position: absolute;
+      bottom: 12px;
+      left: -5px;
+      background-color: inherit;
+    }
+  }
+
+  &__window {
+    height: 500px;
+    overflow: auto;
+    width: calc(100% - 200px);
+    background-color: #fff;
+    padding: 15px;
+    padding-bottom: 100px;
+    position: relative;
+  }
+  &__form {
+    position: absolute;
+    bottom: 15px;
+    right: 15px;
+    width: calc(100% - 30px);
+    form {
+      width: 100%;
+    }
+    textarea {
+      display: block;
+      width: 100%;
+      margin-bottom: 15px;
+      resize: none;
+      border-radius: 5px;
+      border: 1px solid #cfcfcf;
+    }
+    button {
+      display: block;
+      margin-right: 0;
+      margin-left: auto;
     }
   }
 }
